# integration-practice

./: README.md  main.py  pyproject.toml  requirements.txt
docs/: code_inspection.md  module_requirements.md  test_plan.md
src/integration_practice/: __init__.py  data_provider.py  orchestrator.py  processor.py
tests/: test_data_provider.py  test_orchestrator.py  test_processor.py
